fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -138,5 +138,5 @@ footer div {
   margin:5px 0;
 }
 #foot div {
-  overflow:scroll;
+  overflow-x:auto;
 }
